# im-ts-adac

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/reconstruction/: ad.py  adOG.py  ad_V1_1TARGET.py  ad_V2_NORESIDUALS.py  ad_V3_NOMU.py  ad_V4NOFAISS.py  ad_V5NOCLASSIFICATION.py  ad_V6_PRECORREZIONECLAUDE.py  adsperimentale.py  config.yaml  configOG.yaml  config_V1.yaml  config_V2_NO_MULTI.yaml  run_reconstruction.py  run_reconstruction_V1_NO_MULTI.py
tsa/: __init__.py  dataset.py  datasetORIGINALE.py  dataset_V1.py  dataset_V2.py  dataset_V3.py  dataset_V4.py  dataset_V5_1TARGET.py  eval.py  evalOG.py  eval_V1_1TARGET.py  eval_V2_NOMU.py  model.py  modelOG.py  model_V1_1TARGET.py  model_with teacher forcing.py  train.py  trainOG.py  train_V1_1TARGET.py  train_V2_NO_MU.py  utils.py
