[project]
name = "tsa"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "torchvision",
    "matplotlib>=3.3.4",
    "tensorboard",
    "tqdm>=4.59.0",
    "hydra-core>=1.2.0",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "faiss-cpu"
    "notebook" 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
